--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ animation: animate 1.8s linear infinite;
 <body>
     <h1><center>Scrolling text</center></h1>
 <marquee behavior="scroll" direction="right" scrollamount="20">Hello!! How Are You?</marquee>
-<h1>Blinking text</h1>
+<h1><center>Blinking text</center></h1>
 <div>  
     <h2>WELCOME</h2>  
 </div> 
